2004-11-24  Carlos Garnacho Parro  <carlosg@gnome.org>

	* connection.[ch] (modem_dialog_prepare), (modem_dialog_save): added.
	Handled modem GUI.
	* network-iface-modem.[ch]: added missing properties

2004-11-23  Carlos Garnacho Parro  <carlosg@gnome.org>

	* network-iface-modem.[ch]: added files to handle PPP devices
	* Makefile.am: ditto
	* connection.c, gst-network-tool.h, ifaces-list.c: began to handle
	PPP devices
	* callbacks.c: somewhat prettify code

2004-11-22  Carlos Garnacho Parro  <carlosg@gnome.org>

	* ifaces-list.[ch] (gateways_combo_get_selected): added
	* transfer.c: save gateway settings

2004-11-22  Carlos Garnacho Parro  <carlosg@gnome.org>

	* hosts.[ch]: abstracted a bit more, made it able to save the config
	* transfer.[ch]: somewhat improved

2004-11-22  Carlos Garnacho Parro  <carlosg@gnome.org>

	* hosts.[ch]: added for handling /etc/hosts editing
	* Makefile.am: ditto
	* callbacks.[ch], gst-network-tool.[ch], main.c, transfer.c: handled
	hosts aliases editing

2004-11-20  Carlos Garnacho Parro  <carlosg@gnome.org>

	* callbacks.c, network-iface.[ch]: made it able to enable ifaces

2004-11-18  Carlos Garnacho Parro  <carlosg@gnome.org>

	* callbacks.[ch], main.c, network-iface.c: it now disables interfaces
	* transfer.c: do not delete loopback based on interface type, not dev
	name
	* connection.c, callbacks.c: moved a g_object_ref/unref to make the
	code easier to read

2004-11-17  Carlos Garnacho Parro  <carlosg@gnome.org>

	* network-iface-ethernet.c: fixed silly bug that got me annoyed, woo!
	* network-iface-plip.c: added "bootproto" tag

2004-11-17  Carlos Garnacho Parro  <carlosg@gnome.org>

	* network-iface-ethernet.c, network-iface-plip.c,
	network-iface-wireless.c, network-iface.c, transfer.c: more iface
	saving, fixed some issues generating the XML

2004-11-16  Carlos Garnacho Parro  <carlosg@gnome.org>

	* network-iface-ethernet.c: improved config saving
	* network-iface.c: handled "file" tag